--- a/demo.html
+++ b/demo.html
@@ -122,7 +122,8 @@ article {
 <script src="jquery.bugme.js"></script> 
 <script>
 jQuery(document).ready(function () {
-    jQuery('body').bugme({remember:false});
+    jQuery('body').bugme({});
+    jQuery('h1').bugme({cookieName:"pants"});
 });
 </script>
 </body>
