--- a/demo.html
+++ b/demo.html
@@ -122,8 +122,7 @@ article {
 <script src="jquery.bugme.js"></script> 
 <script>
 jQuery(document).ready(function () {
-    jQuery('body').bugme({});
-    jQuery('h1').bugme({cookieName:"pants"});
+    jQuery('body').bugme({remember:false});
 });
 </script>
 </body>
